--- a/index.html
+++ b/index.html
@@ -3,61 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <title>Camera & Subject Azimuth Calculator</title>
-
-  <!-- ✅ Link to manifest.json -->
-  <link rel="manifest" href="manifest.json">
-
-  <!-- ✅ Theme color for Android status bar -->
-  <meta name="theme-color" content="#0077cc">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #eef2f5;
+      background: #f2f6fa;
+      margin: 0;
+      padding: 0;
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
+      align-items: flex-start;
+      min-height: 100vh;
     }
+
+    .app-header {
+      background: #0077cc;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      width: 100%;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+
     .container {
       background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      width: 460px;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      width: 95%;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin-bottom: 15px;
       text-align: center;
+      color: #333;
     }
-    h2 { font-size: 24px; margin-bottom: 20px; }
-    label { font-size: 16px; display: block; margin: 12px 0 6px; text-align: left; }
+
+    label {
+      font-size: 15px;
+      display: block;
+      margin: 12px 0 6px;
+      font-weight: bold;
+      color: #444;
+    }
+
     input, select {
-      font-size: 16px; padding: 10px; width: 100%;
-      margin-bottom: 15px; border: 1px solid #ccc; border-radius: 6px;
+      font-size: 16px;
+      padding: 12px;
+      width: 100%;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-sizing: border-box;
     }
-    input[type=range] { width: 100%; }
+
+    input[type=range] {
+      width: 100%;
+      margin-top: 5px;
+    }
+
     button {
-      font-size: 16px; padding: 12px;
-      background: #0077cc; color: white; border: none; border-radius: 8px;
-      cursor: pointer; width: 100%; margin-top: 10px;
+      font-size: 18px;
+      padding: 14px;
+      background: #0077cc;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      width: 100%;
+      margin-top: 10px;
+      font-weight: bold;
     }
-    button:hover { background: #005fa3; }
+
+    button:hover {
+      background: #005fa3;
+    }
+
     .output {
-      margin-top: 20px; padding: 15px; border-radius: 8px;
-      background: #f8f9fa; font-size: 16px; text-align: left; border: 1px solid #ddd;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 10px;
+      background: #f9fafb;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      color: #333;
     }
-    .error { color: red; margin-top: 10px; }
-    .slider-container { display: none; margin-bottom: 20px; }
-    .hint { font-size: 14px; color: #555; margin-top: -8px; margin-bottom: 6px; }
+
+    .output div {
+      padding: 8px;
+      margin-bottom: 8px;
+      background: #eef6ff;
+      border-radius: 8px;
+      border: 1px solid #cce0ff;
+    }
+
+    .error {
+      color: red;
+      margin-top: 10px;
+    }
+
+    .slider-container {
+      display: none;
+      margin-bottom: 15px;
+    }
+
+    .hint {
+      font-size: 14px;
+      color: #555;
+      margin-top: -4px;
+      margin-bottom: 6px;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Camera & Subject Azimuth Calculator</h2>
+  <div class="app-header">Azimuth Calculator</div>
 
-    <label for="sunAzimuth">Enter Sun Azimuth (°):</label>
+  <div class="container">
+    <h2>Camera & Subject Setup</h2>
+
+    <label for="sunAzimuth">Sun Azimuth (°)</label>
     <input type="number" id="sunAzimuth" placeholder="e.g., 270">
 
-    <label for="option">Select Lighting Option:</label>
+    <label for="option">Lighting Option</label>
     <select id="option" onchange="toggleSlider()">
       <option value="silhouette">Silhouette (Camera faces sun)</option>
       <option value="halo">Halo / Edge Glow</option>
@@ -68,7 +140,7 @@
     </select>
 
     <div class="slider-container" id="sliderBox">
-      <label for="offsetRange">Offset Angle (°): <span id="offsetValue">30</span></label>
+      <label for="offsetRange">Offset Angle: <span id="offsetValue">30</span>°</label>
       <input type="range" id="offsetRange" min="5" max="120" value="30" oninput="updateSliderValue()">
       <div class="hint" id="rangeHint"></div>
       <div class="hint" id="elevationHint"></div>
@@ -81,18 +153,10 @@
   </div>
 
   <script>
-    // ✅ Register service worker
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("Service Worker registered"))
-        .catch(err => console.log("SW registration failed:", err));
-    }
-
     function normalize(angle) {
       return (angle % 360 + 360) % 360;
     }
 
-    // ✅ Defaults + Elevation ranges
     const defaults = {
       halo: { value: 15, range: "Ideal Range: 10–20°", elevation: "Best Sun Elevation: 5–20°" },
       rimlight: { value: 40, range: "Ideal Range: 30–45°", elevation: "Best Sun Elevation: 10–30°" },
@@ -169,7 +233,7 @@
       cameras.forEach((cam, i) => {
         outputHTML += `<div><strong>${labels[i]}:</strong><br>
           Camera Azimuth: ${cam}°<br>
-          Subject Azimuth: ${subjects[i]}°</div><br>`;
+          Subject Azimuth: ${subjects[i]}°</div>`;
       });
 
       document.getElementById("result").innerHTML = outputHTML;
