--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
       return (angle % 360 + 360) % 360;
     }
 
+    // ✅ Defaults with azimuth + elevation hints
     const defaults = {
       halo: { value: 15, range: "Ideal Range: 10–20°", elevation: "Best Sun Elevation: 5–20°" },
       rimlight: { value: 40, range: "Ideal Range: 30–45°", elevation: "Best Sun Elevation: 10–30°" },
