--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
     .container {
       background: white;
       padding: 20px;
-      border-radius: 16px 16px 0 0;
-      box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 600px;
-      margin: 0 auto;
-      margin-top: 10px;
+      border-radius: 16px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      width: 90%;            /* Reduced width */
+      max-width: 480px;      /* Compact on larger screens */
+      margin: 20px auto;     /* Centered */
     }
 
     h2 {
@@ -120,14 +119,15 @@
     /* 📱 Mobile adjustments */
     @media (max-width: 600px) {
       .container {
-        border-radius: 0;
-        padding: 15px;
+        width: 94%;
+        max-width: 420px;
+        padding: 16px;
       }
       h2 {
         font-size: 16px;
       }
       label, input, select, button {
-        font-size: 16px;
+        font-size: 15px;
       }
       button {
         padding: 12px;
